src/shared/components/button/button.css
/**
 * Block
 */

.hw-button {
  display: inline-block;
  padding: var(--hw-spacing-smaller) var(--hw-spacing);
  margin-top: 5px;
  border-radius: 0;
  border: 2px solid var(--hw-color-gray);
  background: var(--hw-color-gray);
  color: var(--hw-color-button-text);
  fill: var(--hw-color-button-text);
  font-size: var(--hw-font-size-small);
  font-family: var(--hw-font-primary-medium);
  line-height: var(--hw-font-size-p);
  transition: all cubic-bezier(0.08, 0.84, 0.07, 0.96) 120ms, background 75ms;
  cursor: pointer;

  &:disabled {
    color: var(--hw-color-white) !important;
    fill: var(--hw-color-white) !important;
    background: var(--hw-color-gray-light) !important;
    border: 2px solid var(--hw-color-gray-light) !important;
    outline: 0 !important;
    box-shadow: none !important;
    cursor: default;
  }

  & .hw-icon {
    margin-right: var(--hw-spacing-smallest);
  }

  /**
   * Modifiers: sizes
   */

  &--large {
    padding: var(--hw-spacing-smaller) var(--hw-spacing-large);
    font-size: var(--hw-font-size-p);
  }

  &--small {
    padding: 0 var(--hw-spacing-smaller);
  }

  &--full {
    width: 100%;
  }

  /**
   * Modifiers: types
   */

  &--primary {
    border: 2px solid var(--hw-color-primary);
    background: var(--hw-color-primary);
    color: var(--hw-color-button-text);
    fill: var(--hw-color-button-text);

    &:hover,
    &:active,
    &:focus {
      color: var(--hw-color-white);
      fill: var(--hw-color-white);
      border-color: var(--hw-color-primary-dark);
      background: var(--hw-color-primary-dark);
      outline: 1px solid var(--hw-color-primary-dark);
    }

    &:active {
      background: var(--hw-color-primary) !important;
    }
  }

  &--secondary {
    border: 2px solid var(--hw-color-gray-dark);
    background: var(--hw-color-gray-dark);
    color: var(--hw-color-white);
    fill: var(--hw-color-white);

    &:hover,
    &:active,
    &:focus {
      border-color: var(--hw-color-gray-darker);
      background: var(--hw-color-gray-darker);
      outline: 1px solid var(--hw-color-gray-darker);
    }

    &:active {
      background: var(--hw-color-gray-dark) !important;
    }
  }

  &--outline {
    border: 3px solid var(--hw-color-gray);
    background: none;
    color: var(--hw-color-gray);
    fill: var(--hw-color-gray);

    &:hover,
    &:active,
    &:focus {
      color: var(--hw-color-white);
      fill: var(--hw-color-white);
      border-color: var(--hw-color-gray);
      background: var(--hw-color-gray);
      outline: 1px solid var(--hw-color-gray);
    }

    &:active {
      border-color: var(--hw-color-gray-darker);
      outline: 1px solid var(--hw-color-gray-darker);
    }
  }

  &--outline-white {
    border: 3px solid var(--hw-color-white);
    background: none;
    color: var(--hw-color-white);
    fill: var(--hw-color-white);

    &:hover,
    &:active,
    &:focus {
      color: var(--hw-color-gray-darker);
      fill: var(--hw-color-gray-darker);
      border-color: var(--hw-color-white);
      background: var(--hw-color-white);
      outline: 1px solid var(--hw-color-white);
    }

    &:active {
      background: var(--hw-color-gray-lightest);
    }
  }

  &--stripped {
    outline: 0;
    border: 0;
    background: none;
    fill: var(--hw-color-gray-dark);
    color: var(--hw-color-gray-darker);

    &:hover {
      fill: var(--hw-color-gray-darker);
      color: var(--hw-color-gray-darker);
    }
  }

  &--round {
    padding: var(--hw-spacing-smallest);
    min-width: 0;
    border-radius: 50%;
    cursor: pointer;

    &:hover,
    &:active,
    &:focus {
      outline: 0;
    }

    &:active {
      outline: 0;
    }

    & .hw-icon {
      margin: 0;
    }
  }
}

